# rssgen

./: CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  TEMPLATE.md  codecov.yml  crates.js  help.html  index.html  release-plz.toml  search-index.js  settings.html  src-files.js
.github/: CODEOWNERS
.github/workflows/: audit.yml  check.yml  ci.yml  coverage.yml  document.yml  lint.yml  release-plz.yml  release.old  release.yml  sbom.yml  scorecard.yml  test.yml
benches/: criterion.rs  stress_test.rs
docs/: MIGRATION-0.0.5-to-0.0.6.md
docs/adr/: 0001-structured-validation-errors.md  0002-time-only-date-stack.md  0003-atom-as-sibling-module.md  README.md
examples/: example.rs  example_atom.rs  example_data.rs  example_detect.rs  example_error.rs  example_generator.rs  example_lib.rs  example_macros.rs  example_parser.rs  example_validation_errors.rs  example_validator.rs  stress_huge_feed.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_date_parsing.rs  fuzz_rss_generation.rs  fuzz_rss_parsing.rs  fuzz_sanitize_content.rs  fuzz_url_validation.rs
rss_gen/: all.html  constant.MAX_DESCRIPTION_LENGTH.html  constant.MAX_FEED_SIZE.html  constant.MAX_GENERAL_LENGTH.html  constant.MAX_LINK_LENGTH.html  constant.MAX_TITLE_LENGTH.html  constant.VERSION.html  fn.quick_rss.html  index.html  macro.macro_generate_rss!.html  macro.macro_generate_rss.html  macro.macro_get_args!.html  macro.macro_get_args.html  macro.macro_metadata_option!.html  macro.macro_metadata_option.html  macro.macro_set_rss_data_fields!.html  macro.macro_set_rss_data_fields.html  macro.macro_write_element!.html  macro.macro_write_element.html  sidebar-items.js
rss_gen/data/: enum.RssDataField.html  enum.RssItemField.html  enum.RssVersion.html  fn.parse_date.html  fn.validate_url.html  index.html  sidebar-items.js  struct.RssData.html  struct.RssItem.html
rss_gen/error/: enum.RssError.html  index.html  sidebar-items.js  struct.DateSortError.html  struct.ValidationError.html  type.Result.html
rss_gen/generator/: fn.generate_rss.html  fn.sanitize_content.html  fn.write_element.html  index.html  sidebar-items.js
rss_gen/macros/: index.html
rss_gen/parser/: fn.parse_rss.html  index.html  sidebar-items.js  struct.ParserConfig.html  trait.ElementHandler.html
rss_gen/prelude/: index.html
rss_gen/validator/: fn.validate_rss_feed.html  index.html  sidebar-items.js  struct.RssFeedValidator.html
search.desc/rss_gen/: rss_gen-desc-0-.js
src/: atom.rs  data.rs  error.rs  generator.rs  lib.rs  macros.rs  parser.rs  validator.rs  version.rs
src/rss_gen/: data.rs.html  error.rs.html  generator.rs.html  lib.rs.html  macros.rs.html  parser.rs.html  validator.rs.html
supply-chain/: audits.toml  config.toml
tests/: property_tests.proptest-regressions  property_tests.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/hash/: trait.Hash.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/core/str/traits/: trait.FromStr.js
trait.impl/serde/de/: trait.Deserialize.js
trait.impl/serde/ser/: trait.Serialize.js
type.impl/core/result/: enum.Result.js
