# -----------------------------------------------------------------------------
# RSS Gen - A Rust library for generating, serializing, and deserializing RSS feeds across various RSS versions.
# -----------------------------------------------------------------------------

[package]
# General project metadata
name = "rss-gen"                            # The name of the library
version = "0.0.4"                           # Current version of the crate
authors = ["RSS Generator Contributors"]    # Library contributors
edition = "2021"                            # Rust edition being used
rust-version = "1.68.0"                     # Minimum supported Rust version
license = "MIT OR Apache-2.0"               # Dual licensing strategy
description = """
A Rust library for generating, serializing, and deserializing RSS feeds for various RSS versions.
"""                                         # Short library description
homepage = "https://rssgen.co/"             # Project's homepage URL
documentation = "https://rssgen.co/documentation/index.html" # Doc URL
repository = "https://github.com/sebastienrousseau/rssgen"    # Repository URL
readme = "README.md"                        # Path to the readme file
build = "build.rs"                          # Path to the build script

# -----------------------------------------------------------------------------
# Crate Configuration
# -----------------------------------------------------------------------------

# Crates.io categories
categories = [
    "data-structures",
    "parsing",
    "encoding",
    "web-programming",
    "development-tools"
]

# Keywords for easier discoverability on Crates.io
keywords = ["cli", "generator", "site", "ssg", "static"]

# Excluding unnecessary files from the package
exclude = [
    "/.git/*",                              # Exclude version control files
    "/.github/*",                           # Exclude GitHub workflows
    "/.gitignore",                          # Ignore Git ignore file
    "/.vscode/*"                            # Ignore VSCode settings
]

# -----------------------------------------------------------------------------
# Dependencies
# -----------------------------------------------------------------------------

[dependencies]
# List of external crates used in this project
dtt = "0.0"
log = "0.4"
quick-xml = { version = "0.39", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = "0.3"
url = "2.5"
commons = { git = "https://github.com/sebastienrousseau/commons", tag = "v0.0.1", default-features = false, features = ["error", "time"] }

[build-dependencies]
# Dependencies for build scripts
version_check = "0.9"

[dev-dependencies]
# Dependencies for development and testing
criterion = "0.8"
lazy_static = "1.5"
proptest = "1.4"
quickcheck = "1.0"
quickcheck_macros = "1.0"
arbitrary = { version = "1.3", features = ["derive"] }
tokio-test = "0.4"

# -----------------------------------------------------------------------------
# Library Information
# -----------------------------------------------------------------------------

[lib]
# Library-specific settings
name = "rss_gen"                        # Internal name of the library
path = "src/lib.rs"                     # Path to the library entry point

# -----------------------------------------------------------------------------
# Features
# -----------------------------------------------------------------------------
[features]
async = []

# -----------------------------------------------------------------------------
# Benchmarking
# -----------------------------------------------------------------------------

[[bench]]
# [[bench]] sections define benchmarks.
name = "benchmark"
harness = false
path = "benches/criterion.rs"

[[bench]]
# Stress testing benchmarks for performance validation
name = "stress_test"
harness = false
path = "benches/stress_test.rs"

[profile.bench]
# Profile for benchmarks.
debug = true

[profile.release]
# Release profile optimization
lto = true           # Link Time Optimization
codegen-units = 1    # Fewer codegen units for better optimization
strip = "symbols"    # Strip symbols to reduce binary size
panic = "abort"      # Reduce binary size
overflow-checks = false


